# agora

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init_mvp.py  0002_add_clusters.py  0003_add_places.py  0004_segment_unique_per_place.py  0005_conversation_threads_entries.py  0006_thread_context_memory.py  0007_turn_provider_metadata.py  0008_thread_geo_context.py  0009_taxonomy_candidates.py  0010_sentiment_audit_reviews.py
app/: main.py
app/api/: routes.py  security.py
app/core/: config.py  security.py  taxonomies.py
app/db/: session.py
app/models/: __init__.py  models.py
app/schemas/: admin_metrics.py  admin_places.py  conversation.py  feedback.py  ingest.py  integrations.py  jobs.py  map.py  sentiment_audit.py  taxonomy.py
app/services/: admin_metrics_service.py  cluster_service.py  conversation_admin_service.py  conversation_service.py  corridor.py  feedback_service.py  ingest_service.py  (+9 more)
docs/: local-docker-setup.md  local-llm-setup.md  quickstart.md  whatsapp-meta-setup.md
postman/: agora-local.postman_environment.json  agora-mvp.postman_collection.json
scripts/: check_local_llm.sh  smoke_whatsapp_flow.sh  verify_webhook.sh
tests/: conftest.py  test_admin_metrics.py  test_admin_places.py  test_ingest_feedback.py  test_map_and_thread_metadata.py  test_model_service_sentiment_alignment.py  test_sentiment_audit.py  test_taxonomy_candidates.py  test_whatsapp_and_cluster.py  test_whatsapp_dialog.py
(+1 files in other folders)
