[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora-backend"
version = "0.1.0"
description = "Agora MVP backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.4",
  "black>=24.8.0",
  "pre-commit>=4.0.1",
]
local-audio = [
  "faster-whisper>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
